# VEE

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.helix/: languages.toml
Resources/: color.frag  entity.vert  sprite.slang  texture.frag
Source/HelloTriangle/: CMakeLists.txt
Source/HelloTriangle/Private/: GameRenderer.cpp  GameRenderer.hpp  HelloTriangle.cpp
Source/HelloTriangle/Resources/: color.frag  entity.vert  square.vert  texture.frag  triangle.vert
Source/HelloTriangle/Source/: HelloTriangle.cpp
Source/VeeCore/: CMakeLists.txt
Source/VeeCore/Private/: Assert.cpp  Debugging_linux.cpp  Debugging_win32.cpp  LogUtil.hpp  Logging.cpp  Name.cpp
Source/VeeCore/Public/: Assert.hpp  Debugging.hpp  FNV-1a.hpp  Logging.hpp  Name.hpp  VeeCore.hpp
Source/VeeEditor/: CMakeLists.txt
Source/VeeEditor/Private/: EditorApplication.cpp  EditorRenderPass.cpp  ImguiRenderer.cpp  ImguiRenderer.hpp  Inspector.cpp
Source/VeeEditor/Public/: Editor.ixx  EditorApplication.hpp  EditorRenderPass.hpp  Inspector.hpp
Source/VeeEngine/: CMakeLists.txt
Source/VeeEngine/Source/Platform/: Window.cpp  Window.hpp
Source/VeeRenderer/: CMakeLists.txt
Source/VeeRenderer/Source/: Renderer.hpp
Source/VeeRenderer/Source/Renderer/: Buffer.cpp  Image.cpp  Pipeline.cpp  VkUtil.cpp
Source/VeeRuntime/: CMakeLists.txt
Source/VeeRuntime/Private/: Application.cpp  Assert.cpp  Engine.cpp  Fibers.cpp  Fibers_linux_x64.s  Fibers_win32.cpp  Fibers_win32_x64.s  JobManager.cpp  JobManager_linux.cpp  JobManager_win32.cpp  LogUtil.hpp  Logging.cpp  Main.cpp  Renderer.cpp  RingBuffer.cpp  Transform.cpp  stb_image_impl.cpp
Source/VeeRuntime/Private/Components/: CameraComponent.cpp  SpriteRendererComponent.cpp
Source/VeeRuntime/Private/Engine/: Engine.cpp  Entity.cpp  FrameImagePass.cpp  Material.cpp  SceneRenderPass.cpp  Sprite.cpp  Texture.cpp  World.cpp
Source/VeeRuntime/Private/Platform/: Filesystem.cpp  Window.cpp  filesystem.cpp
Source/VeeRuntime/Private/RenderGraph/: Pass.cpp  RenderGraph.cpp  RenderGraphBuilder.cpp  Sink.cpp  Source.cpp
Source/VeeRuntime/Private/Renderer/: Buffer.cpp  GameRenderer.cpp  Image.cpp  Pipeline.cpp  RenderCtx.cpp  Shader.cpp  Swapchain.cpp  VkUtil.cpp
Source/VeeRuntime/Public/: Application.hpp  Assert.hpp  Engine.hpp  Engine.ixx  FiberContext.h  FiberContext_linux_x64.h  FiberContext_win32_x64.h  Fibers.hpp  GameConfig.hpp  IApplication.hpp  JobManager.hpp  Keys.hpp  Logging.hpp  Logging.ixx  MakeSharedEnabler.hpp  Renderer.hpp  Renderer.ixx  RingBuffer.hpp  Transform.h  VeeCore.hpp  Vertex.hpp
Source/VeeRuntime/Public/Components/: CameraComponent.hpp  CameraComponent.ixx  SpriteRendererComponent.hpp  SpriteRendererComponent.ixx
Source/VeeRuntime/Public/Engine/: Engine.hpp  Entity.h  FrameImagePass.hpp  Material.hpp  SceneRenderPass.hpp  Service.hpp  Sprite.hpp  Texture.hpp  World.h
Source/VeeRuntime/Public/Platform/: Filesystem.hpp  Window.hpp  WindowHandle.hpp
Source/VeeRuntime/Public/RenderGraph/: DirectSink.hpp  DirectSource.hpp  Handles.hpp  ImageResource.hpp  Pass.hpp  RenderGraph.hpp  RenderGraphBuilder.hpp  Sink.hpp  Source.hpp
Source/VeeRuntime/Public/Renderer/: Buffer.hpp  Buffer.ixx  GameRenderer.hpp  GameRenderer.ixx  IRenderer.hpp  IRenderer.ixx  Image.hpp  Image.ixx  Pipeline.hpp  Pipeline.ixx  RenderCtx.hpp  RenderCtx.ixx  Shader.hpp  Shader.ixx  Swapchain.hpp  Swapchain.ixx  VkUtil.hpp  VkUtil.ixx
Source/VeeRuntime/Source/: Engine.hpp  RingBuffer.hpp
Source/VeeRuntime/Source/Platform/: Window.hpp  filesystem.cpp  filesystem.hpp
Source/VeeRuntime/Source/Platform/Win32/: WindowHandle.hpp
Source/VeeRuntime/Source/Renderer/: Image.hpp  VkUtil.hpp
Tests/VeeCore/: CMakeLists.txt  Name.cpp
VEE/Resources/: square.vert  triangle.frag  triangle.vert
VEE/Source/: Renderer.cpp  Renderer.hpp  RingBuffer.cpp  RingBuffer.hpp  VEE.cpp  VeeCore.hpp  Vertex.hpp
VEE/Source/Platform/: Filesystem.cpp  Filesystem.hpp  Window.cpp  Window.hpp
VEE/Source/Platform/Win32/: WindowHandle.hpp
VEE/Source/Renderer/: Buffer.cpp  Buffer.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  VkUtil.cpp  VkUtil.hpp
